update pom.xml file